# portfolio-trajectory

./: AGENTS.md  LICENSE  README.md
.github/workflows/: ci.yml
app/: .prettierignore  README.md  eslint.config.ts  package-lock.json  package.json  vitest.config.ts
app/app/routes/: home.test.tsx  home.tsx
backend/: Dockerfile  README.md  pyproject.toml
backend/portfolio_trajectory/: main.py
backend/portfolio_trajectory/schemas/: base.py  input.py  output.py
backend/tests/: test_schemas_input.py  test_schemas_output.py
docs/: portfolio-trajectory-discussion-notes.md  portfolio-trajectory-primary-docs.md
portfolio-trajectory/: package.json
